# CAIROS_Daemon

./: .gitignore  CHANGELOG.md  README.md  REPA_framework overview.md  requirements.txt
docs/: DEPENDENCIES.md  SDD_IEEE.md  SECURELOGGER_NOTICE.md
examples/: README.md
models/: README.md
native/: CMakeLists.txt
native/include/: granite_embedder.hpp  identity_anchor.hpp  recp_metrics.hpp
native/src/: coords_from_embeddings_cli.cpp  granite_embedder.cpp  granite_embedder_cli.cpp  granite_hidden_state_cli.cpp  granite_tokenizer_cli.cpp  identity_anchor.cpp  identity_anchor_cli.cpp  recp_metrics.cpp  recp_metrics_cli.cpp
python/: coords_from_embeddings.py  granite_loader.py  granite_tokenizer.py  model_hub.py  track_a_ctxonoff_metrics.py
